--- a/examples/ammonia2024/inputs.yaml
+++ b/examples/ammonia2024/inputs.yaml
@@ -1,9 +1,10 @@
 PrePost:
   rawData: true
+  rawFile: Data_1400K.yaml
 
 mfr:
   Restart: false
-  restartFile: Restart.xml
+  restartFile: Restart.yaml
   simWithPhi: true
   equilRatio: 1.0
   fuelComp: "NH3: 1.0"
