--- a/examples/ammonia2017/inputs.yaml
+++ b/examples/ammonia2017/inputs.yaml
@@ -3,7 +3,7 @@ PrePost:
 
 mfr:
   Restart: false
-  restartFile: Restart.xml
+  restartFile: Restart.yaml
   simWithPhi: true
   equilRatio: 1.0
   fuelComp: "NH3: 1.0"
